NetBSD Problem Report #41016

From apb@cequrux.com  Sat Mar 14 15:08:49 2009
Return-Path: <apb@cequrux.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id F21E563BA0A
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 14 Mar 2009 15:08:48 +0000 (UTC)
Message-Id: <20090314150241.A91F7E94DB5@apb-laptoy.apb.alt.za>
Date: Sat, 14 Mar 2009 15:02:41 +0000 (UTC)
From: apb@cequrux.com
To: gnats-bugs@gnats.NetBSD.org
Subject: cgd does not implement DIOCCACHESYNC
X-Send-Pr-Version: 3.95

>Number:         41016
>Category:       kern
>Synopsis:       cgd does not implement DIOCCACHESYNC
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Mar 14 15:10:00 +0000 2009
>Closed-Date:    Sat Apr 04 17:28:10 +0000 2009
>Last-Modified:  Sat Apr 04 17:28:10 +0000 2009
>Originator:     Alan Barrett
>Release:        NetBSD 5.99.7
>Organization:
Not much
>Environment:
System: NetBSD 5.99.7 i386
>Description:
        The DIOCCACHESYNC ioctl is undocumented, but wapbl(4) relies on
        it to flush the disk cache.  The cgd driver does not implement
        this ioctl, so crashes while writing to a file system on a vnd
        are likely to encounter more corruptioon than they should.
>How-To-Repeat:
        Code inspection
>Fix:
        A DIOCCACHESYNC at the cgd level should become a DIOCCACHESYNC
        on the underlying disk device.  At present, the cgd layer simply
	passes the ioctl on to dk_ioctl(), which does not implement it.

>Release-Note:

>Audit-Trail:
From: Alan Barrett <apb@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41016 CVS commit: src/sys/dev
Date: Sat, 14 Mar 2009 17:56:47 +0000

 Module Name:	src
 Committed By:	apb
 Date:		Sat Mar 14 17:56:47 UTC 2009

 Modified Files:
 	src/sys/dev: cgd.c

 Log Message:
 Pass DIOCCACHESYNC ioctl down to the underlying disk.
 Addresses PR 41016.


 To generate a diff of this commit:
 cvs rdiff -u -r1.56 -r1.57 src/sys/dev/cgd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41016 CVS commit: [netbsd-5] src/sys/dev
Date: Sat, 4 Apr 2009 17:18:54 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Sat Apr  4 17:18:53 UTC 2009

 Modified Files:
 	src/sys/dev [netbsd-5]: cgd.c

 Log Message:
 Pull up following revision(s) (requested by apb in ticket #653):
 	sys/dev/cgd.c: revision 1.57
 Pass DIOCCACHESYNC ioctl down to the underlying disk.
 Addresses PR 41016.


 To generate a diff of this commit:
 cvs rdiff -u -r1.53.4.1 -r1.53.4.2 src/sys/dev/cgd.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: apb@NetBSD.org
State-Changed-When: Sat, 04 Apr 2009 17:28:10 +0000
State-Changed-Why:
fixed and pulled up to netbsd-5


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.